--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,31 @@
-sudo: false
 dist: xenial
+if: branch = main OR repo =~ /-internal/
 language: ruby
 rvm:
 - 2.4.3
-if: repo =~ /-internal/
+env:
+  global:
+    - FRAMEWORK_BRANCH=main
 before_install:
 - echo -e "machine github.com\n login $GH_TOKEN" >> ~/.netrc && chmod 600 ~/.netrc
-- git submodule add https://github.com/NetAppDocs/jekyll dependencies/jekyll
+- git submodule add -b $FRAMEWORK_BRANCH https://github.com/NetAppDocs/jekyll dependencies/jekyll
 - gem update --system && gem install bundler && gem update bundler
 - if [[ -z "$DEPLOY_BRANCH" ]]; then export DEPLOY_BRANCH=gh-pages; fi
+- cp -rl dependencies/jekyll/search.html ./get-started/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ get-started\/search\.html/g' ./get-started/search.html
+- cp -rl dependencies/jekyll/search.html ./use/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ use\/search\.html/g' ./use/search.html
+- cp -rl dependencies/jekyll/search.html ./learn/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ learn\/search\.html/g' ./learn/search.html
+- cp -rl dependencies/jekyll/search.html ./solutions/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ solutions\/search\.html/g' ./solutions/search.html
+- cp -rl dependencies/jekyll/search.html ./support/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ support\/search\.html/g' ./support/search.html
 - mv dependencies/jekyll/prod-build.sh ./ && ./prod-build.sh
 - sudo apt-get -y install graphicsmagick graphicsmagick-libmagick-dev-compat libmagickwand-dev
-install: bundle install --quiet --jobs=3 --retry=3
 script:
 - if [[ ! -z "$FEATURE_FLAG" ]]; then bundle exec rake buildAll; fi
-- mkdir -p /tmp/output && bundle exec jekyll build --quiet --trace --destination /tmp/output
+- mkdir -p /tmp/output && bundle exec jekyll build --trace --destination /tmp/output --config _config.yml,project.yml
 - touch /tmp/output/.nojekyll
 deploy:
   provider: pages
