--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,20 @@ before_install:
 - git submodule add -b $FRAMEWORK_BRANCH https://github.com/NetAppDocs/jekyll dependencies/jekyll
 - gem update --system && gem install bundler && gem update bundler
 - if [[ -z "$DEPLOY_BRANCH" ]]; then export DEPLOY_BRANCH=gh-pages; fi
-- cp -rl dependencies/jekyll/search.html ./get-started/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ get-started\/search\.html/g' ./get-started/search.html
-- cp -rl dependencies/jekyll/search.html ./use/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ use\/search\.html/g' ./use/search.html
-- cp -rl dependencies/jekyll/search.html ./learn/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ learn\/search\.html/g' ./learn/search.html
-- cp -rl dependencies/jekyll/search.html ./solutions/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ solutions\/search\.html/g' ./solutions/search.html
-- cp -rl dependencies/jekyll/search.html ./support/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ support\/search\.html/g' ./support/search.html
+- cp -rl dependencies/jekyll/search.html ./command-map/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ command-map\/search\.html/g' ./command-map/search.html
+- cp -rl dependencies/jekyll/search.html ./copy-based/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ copy-based\/search\.html/g' ./copy-based/search.html
+- cp -rl dependencies/jekyll/search.html ./copy-free/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ copy-free\/search\.html/g' ./copy-free/search.html
+- cp -rl dependencies/jekyll/search.html ./install-admin/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ install-admin\/search\.html/g' ./install-admin/search.html
+- cp -rl dependencies/jekyll/search.html ./inventory-collect/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ inventory-collect\/search\.html/g' ./inventory-collect/search.html
+- cp -rl dependencies/jekyll/search.html ./san-host/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ san-host\/search\.html/g' ./san-host/search.html
+- cp -rl dependencies/jekyll/search.html ./snap-mirror/search.html
+- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ snap-mirror\/search\.html/g' ./snap-mirror/search.html
 - mv dependencies/jekyll/prod-build.sh ./ && ./prod-build.sh
 - sudo apt-get -y install graphicsmagick graphicsmagick-libmagick-dev-compat libmagickwand-dev
 script:
